fixed index.css so zooming out aligns everything to left

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,7 +7,7 @@
     padding : 0;
     margin : 0;
     box-sizing : border-box;
-    
+    max-width : 1519px;
 }
 
 .topbar-section{
@@ -289,8 +289,10 @@
     font-family : comfortaa;
 }
 .email_message-container{
-    padding-left : 750px;
-    padding-right: 120px;
+    position : relative;
+    bottom : 40px;
+    padding-left : 810px;
+    align-items : right;
 }
 
 #email-field {
@@ -301,10 +303,10 @@
     padding-left : 20px;
     border : none;
     border-radius: 10px;
+
 }
 
 #message-field{
-    position : relative;
     font-family: comfortaa; 
     background-color : #f2f2f2;
     width: 650px;
@@ -314,29 +316,27 @@
     border : none;
     border-radius: 10px;
     resize : none;
+
 }
 .email{
     position : relative;
     bottom : 50px;
-    
 }
 
 .message{
-    position : relative;
     width : 500px;
 }
 
 .submit-message{
     position : relative;
-    top  : 20px;
-    float : right;
+    left : 550px;
     font-family : comfortaa;
     background-color: #728ddf;
     border-radius: 10px;
     border : none;
     width: 100px;
     height: 40px;
-    color : white
+    color : white;
 }
 
 .footer{
